Kubernetes/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depi-board-game
  labels:
    app: depi-board-game
spec:
