Kubernetes/Pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: depi-board-game
  labels:
    app: depi-board-game
spec:
  containers:
  - name: depi-board-game
    image: board-game:latest
    imagePullPolicy: Never
    ports:
    - containerPort: 8080
